[project]
name = "voxel-level-brain-age-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "itk>=5.4.3",
    "matplotlib>=3.10.3",
    "monai>=1.4.0",
    "nibabel>=5.3.2",
    "pandas>=2.2.3",
    "scikit-image>=0.25.2",
    "torch>=2.7.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.0",
    "wandb>=0.19.11",
]
